--- a/phpmyadmin-apache-php-mysql/public/index.html
+++ b/phpmyadmin-apache-php-mysql/public/index.html
@@ -1,1 +1,1 @@
-<h1>prueba<h1>
+<h1 style="color:#F06292;border:12px solid rgb(0, 255, 255)">Esta es una prueba con docker compose para el proyecto final</h1>
